--- a/app/src/main/res/layout/sim_info.xml
+++ b/app/src/main/res/layout/sim_info.xml
@@ -197,7 +197,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
-    <com.google.android.gms.ads.AdView
+    <!--com.google.android.gms.ads.AdView
         android:id="@+id/adView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -205,6 +205,6 @@
         ads:adUnitId="@string/banner_ad_unit_id"
         android:foregroundGravity="bottom"
         android:layout_gravity="center_horizontal|bottom">
-    </com.google.android.gms.ads.AdView>
+    </com.google.android.gms.ads.AdView-->
 
 </FrameLayout>
